--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             </div>
         </header>
 
+        <section>
+            
 <!--Mission Statement-->
         <section>
             <div>
@@ -61,6 +63,8 @@
             <video controls loop width=“320” height=“240" controls>
                 <source src="Images/SpaceForce Web.mp4" type=“video/mp4">
             </video>
+        </section>
+
         </section>
 
         <footer>
