Career Images Fixed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="videoWrap">
         <video autoplay muted loop class="headervideo">
-            <source src="Images/SpaceForce Web.mp4" type="video/mp4">
+            <source src="Images/spaceforce-web.mp4" type="video/mp4">
       </video>
     </div>
 
@@ -185,37 +185,37 @@
     <div class="careers-cards">
         <ul>
             <li>
-                <img src="Images/Cyberspace Operations Officer.jpg">
+                <img src="Images/cyberspace-op-officer.jpg">
                 <h6>Officer</h6>
                 <h3>Cyberspace Operations Officer</h3>
                 <p>Responsible for a wide range of weaponry, training and intelligence efficiencies, Cyberspace Operations Officers are the foremost experts on the vast world of cyberspace.</p>
             </li>
             <li>
-                <img src="Images/Cyber Surety.jpg">
+                <img src="Images/cyber-surety.jpg">
                 <h6>Enlisted</h6>
                 <h3>Cyber Surety</h3>
                 <p>Responsible for preventing, detecting and repelling cyber attacks, Cyber Surety specialists ensure the security of computer networks and online communications. From programming to hardware, these experts keep our systems and our information safe.</p>
             </li>
             <li>
-                <img src=“Images/Aquisition Manager.jpg”>
+                <img src="Images/aquisition-mgr.jpg">
                 <h6>Officer</h6>
                 <h3>Acquisition manager</h3>
                 <p>From implementing engineering to securing final shipping, Acquisition Managers oversee all aspects of the process to ensure the necessary equipment and supplies get where they need to be anywhere in the world.</p>
             </li>
             <li>
-                <img src=“Images/Cyber Systems Operations.jpg”>
+                <img src="Images/cyber-sys-op.jpg">
                 <h6>Enlisted</h6>
                 <h3>Cyber Systems operations</h3>
                 <p> It’s the job of Cyber Systems Operations specialists to design, install and support our systems to ensure they operate properly and remain secure from outside intrusion. These experts provide us with the best and most secure systems.</p>
             </li>
             <li>
-                <img src=“Images/Fusion analyst.jpg”>
+                <img src="Images/fusion-analyst.jpg">
                 <h6>Enlisted</h6>
                 <h3>Fusion Analyst</h3>
                 <p>Fusion Analysts determine the value of intelligence we receive from target network communications. These specialists distribute their findings to high-level decision-makers so we can take timely action to ensure the safety of Airmen and our country.</p>
             </li>
             <li>
-                <img src=“Images/Computer Systems Programming.jpg”>
+                <img src="Images/computer-sys-prog.jpg">
                 <h6>Enlisted</h6>
                 <h3>Computer systems programming</h3>
                 <p>These experts write, analyze, design and develop programs that are critical to our war-fighting capabilities. They ensure we have the software and programs needed to complete our missions efficiently and effectively.</p>
