--- a/index.html
+++ b/index.html
@@ -229,32 +229,38 @@
 
 </section>
 
- <footer>
-     <div>
-         <ul>
-            <li>HOME</li>
-            <li>NEWS</li>
-            <li>ABOUT US</li>
-            <li>CAREERS</li>
-            <li>RESOURCES</li>
-            <li>CONNECT</li>
-        </ul>
-    </div>
-    <div>
-        <a href="">Privacy Policy</a>
-        <a href="">About Our Ads</a>
-        <a href="">Sitemap</a>
-    </div>
+<footer>
+    <div class="grid-container">
+        <div id="footer-menu">
+            <p>HOME</p>
+            <p>NEWS</p>
+            <p>ABOUT US</p>
+            <p>CAREERS</p>
+            <p>RESOURCES</p>
+            <p>CONNECT</p>
+        </div>
 
-    <div>
-        <img src="" alt="Space Force Logo" />
-    </div>
-    <div>
+        <div id="footer-image">
+            <img src="Images/spaceforce-emblem.svg" alt="space force logo"/>
+        </div>
+    
+        <div id="footer-info">
+            <p>Privacy Policy</p>
+            <p>About Our Ads</p>
+            <p>Sitemap</p>
+        </div>
 
+        <div id="footer-socials">
+            <ul>
+                <li><a><img src="Images/social-icons@2x.png" alt="facebook logo"/></a></li>
+                <!-- <li><a><img src="" alt="facebook logo"/></a></li>
+                <li><a><img src="" alt="facebook logo"/></a></li>
+                <li><a><img src="" alt="facebook logo"/></a></li>
+                <li><a><img src="" alt="facebook logo"/></a></li> -->
+            </ul>
+        </div>
     </div>
-        </footer>
-
--->
+</footer>
         
     </body>
 </html>
