--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
 
         <div id="footer-socials">
             <ul>
-                <li><a><img src="Images/social-icons@2x.png" alt="facebook logo"/></a></li>
-                <!-- <li><a><img src="" alt="facebook logo"/></a></li>
-                <li><a><img src="" alt="facebook logo"/></a></li>
-                <li><a><img src="" alt="facebook logo"/></a></li>
-                <li><a><img src="" alt="facebook logo"/></a></li> -->
+                <li><i class="fab fa-facebook-f"></i></li>
+                <li><i class="fab fa-twitter"></i></li>
+                <li><i class="fab fa-instagram"></i></li>
+                <li><i class="fab fa-youtube"></i></li>
+                <li><i class="fab fa-flickr"></i></li>
             </ul>
         </div>
     </div>
