--- a/index.html
+++ b/index.html
@@ -246,18 +246,17 @@
     
         <div id="footer-info">
             <p>Privacy Policy</p>
-            <p>About Our Ads</p>
+            <p>About Our Ads</p>    
             <p>Sitemap</p>
         </div>
 
         <div id="footer-socials">
-            <ul>
-                <li><i class="fab fa-facebook-f"></i></li>
-                <li><i class="fab fa-twitter"></i></li>
-                <li><i class="fab fa-instagram"></i></li>
-                <li><i class="fab fa-youtube"></i></li>
-                <li><i class="fab fa-flickr"></i></li>
-            </ul>
+                <!-- <p><a><img src="Images/social-icons@2x.png" alt="facebook logo"/></a></p> -->
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-flickr"></i>
         </div>
     </div>
 </footer>
