--- a/index.html
+++ b/index.html
@@ -18,18 +18,50 @@
   
 
 
-<div class="container">
+<div
+class="container">
+
 <nav>
-    <img src="Images/spaceforce-emblem.svg" alt="Space Force Logo" style="max-width:35px;"/>
 
-    <a href="">NEWS</a>
-    <a href="">ABOUT US</a>
-    <a href="">CAREERS</a>
-    <a href="">RECOURCES</a>
-    <a href="">CONNECT</a>
+<div
+class="top-navbar">
 
-    <!--Insert Search Icon Here-->
-</nav>     
+<div
+class="max-width">
+
+<img
+src="Images/spaceforce-emblem.svg"
+alt="Space Force Logo"
+style="max-width:35px;"width="35"
+/>
+
+<li><a>News</a></li>
+
+<li><a>About Us</a></li>
+
+<li><a>Careers</a></li>
+
+<li><a>Resources</a></li>
+
+<li><a>Connect</a></li>
+
+<svg
+class="searchbtn"
+xmlns="http://www.w3.org/2000/svg"
+width="18"
+height="18"
+viewBox="0 0 18 18">
+
+<path
+id="download"
+d="M12,2.1A6.882,6.882,0,0,0,7,0,6.882,6.882,0,0,0,2,2.1,6.8,6.8,0,0,0,0,7a6.882,6.882,0,0,0,2.1,5A6.8,6.8,0,0,0,7,14a6.882,6.882,0,0,0,5-2.1,7.119,7.119,0,0,0,2.1-5A7.283,7.283,0,0,0,12,2.1Zm-1.5,8.4A4.691,4.691,0,0,1,7,12a4.691,4.691,0,0,1-3.5-1.5A4.691,4.691,0,0,1,2,7,4.691,4.691,0,0,1,3.5,3.5,4.691,4.691,0,0,1,7,2a4.691,4.691,0,0,1,3.5,1.5A4.691,4.691,0,0,1,12,7,4.691,4.691,0,0,1,10.5,10.5ZM14.3,13,13,14.3,16.7,18,18,16.7,14.3,13Z"
+fill="#fff"/>
+
+</svg>
+</div></div>
+<!--Insert Search Icon Here-->
+</nav>
+
 
 <section class="homeheader">
 
@@ -76,8 +108,15 @@
 
 
 <section class="Branches">
-    <div class="stars-container"><div class="stars"></div>
-    <div class="twinkling"></div></div>
+
+
+    <div class="stars-container">
+        <div class="stars"></div>
+        <div class="twinkling"></div>
+        <div class="clouds"></div>
+</div>
+
+
     <div class="Branches-content">
             <h2>LEARN MORE ABOUT U.S. SPACE FORCE</h2>
 
