--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <title>Space Force</title>
 
         <link rel="stylesheet" href="styles.css">
+        <script src="index.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" 
             integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" 
             crossorigin="anonymous" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
        
     </head>
     <body>
@@ -58,6 +60,12 @@ d="M12,2.1A6.882,6.882,0,0,0,7,0,6.882,6.882,0,0,0,2,2.1,6.8,6.8,0,0,0,0,7a6.882
 fill="#fff"/>
 
 </svg>
+
+<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+<a href="javascript:void(0);" class="icon" id="hamburger" onclick="toggleMenu()">
+    <i class="fa fa-bars"></i>  
+</a>
+
 </div></div>
 <!--Insert Search Icon Here-->
 </nav>
