apply now added

--- a/index.html
+++ b/index.html
@@ -332,6 +332,27 @@ class="container">
      </div>
 
 
+<section class="applynow">
+    <div class="applynow-summary max-width">
+        
+        <p>Your future is waiting.</p>
+        <h2>APPLY NOW</h2>
+        <a href="https://www.airforce.com/spaceforce" class="button-outline inverted" target="_blank" style="opacity: 1;">
+            <span class="button-outline-copy" >
+                        <span class="button-text-wrapper">
+                    <div style="position:relative;display:inline-block;">
+                    <div style="position:relative;display:inline-block;" class="text-animation is-inverted state-1 state-2 state-3">GET STARTED</div>
+                    </div></span>
+                    </span>
+                </span>
+                <span class="button-outline-bottom"></span>
+            </a>
+    </div>
+</section>
+
+
+
+
 <footer>
     <div class="grid-container max-width2">
         <div id="footer-menu">
