--- a/index.html
+++ b/index.html
@@ -12,19 +12,10 @@
        
     </head>
     <body>
-
-
-
 <!--Top Nav-->        
-
-  
-
-
 <div
 class="container">
-
 <nav>
-
 <div class="top-navbar">
         <div class="max-width2">
 
@@ -47,8 +38,6 @@ class="container">
         </div></div>
 <!--Insert Search Icon Here-->
 </nav>
-
-
 <section class="homeheader">
 
     <div class="videoWrap">
@@ -58,7 +47,7 @@ class="container">
     </div>
 
     <div class="headercontent">
-        <img src="images/spaceforce.svg"  style="max-width:260px;"alt="Space Force text logo" />
+        <img src="Images/spaceforce.svg"  style="max-width:260px;"alt="Space Force text logo" />
 <h1>THE SKY IS NOT THE LIMIT</h1>
         <div>
             <a href="https://www.airforce.com/spaceforce" class="button-outline inverted" target="_blank" style="opacity: 1; margin:0px 20px;">
@@ -196,11 +185,11 @@ class="container">
     <div class="careers-summary max-width">
         <h2>MAYBE YOUR PURPOSE ON THIS PLANET ISN’T ON THIS PLANET.</h2>
         <p>The United States Space Force is recruiting the brightest minds in science, technology, aerospace and engineering. We don’t just think outside the box, we think outside the atmosphere. If you’d like to be part of a team being built to meet the challenges of tomorrow, join us. We can see your future from up here.</p>
-        <a href="https://www.airforce.com/spaceforce" class="button-outline inverted" target="_blank" style="opacity: 1;">
+        <a href="https://www.airforce.com/spaceforce" class="button-outline" target="_blank" style="margin-top:3em;color:black;opacity: 1;">
             <span class="button-outline-copy" >
                         <span class="button-text-wrapper">
                     <div style="position:relative;display:inline-block;">
-                    <div style="position:relative;display:inline-block;" class="text-animation is-inverted state-1 state-2 state-3">GET STARTED</div>
+                    <div style="position:relative;display:inline-block;" class="text-animation is-inverted state-1 state-2 state-3">Learn More</div>
                     </div></span>
                     </span>
                 </span>
