--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" 
             crossorigin="anonymous" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-       
+        <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     </head>
     <body>
 <!--Top Nav-->        
